[package]
name = "shorty"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Noronha"]
license = "MIT OR Apache-2.0"

[dependencies]
mongodb = "3.0.0"
sha2 = "0.10.8"
rand = "0.8.5"
hex = "0.4.3"
chrono = "0.4.38"
regex = "1.10.5"
lazy_static = "1.5.0"

[dependencies.tokio]
version = "1.38.0"
features = ["full"]

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.bson]
version = "2.11.0"
features = ["chrono-0_4"]

[dev-dependencies]
dotenv = "0.15.0"

[[bin]]
name = "shorty"
path = "src/main.rs"
