[package]
name = "shorty"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Noronha"]
license = "MIT OR Apache-2.0"

[dependencies]
mongodb = "3.2.2"
sha2 = "0.10.8"
rand = "0.9.0"
hex = "0.4.3"
chrono = "0.4.40"
regex = "1.11.1"
lazy_static = "1.5.0"

[dependencies.tokio]
version = "1.44.1"
features = ["full"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.bson]
version = "2.13.0"
features = ["chrono-0_4"]

[dev-dependencies]
dotenv = "0.15.0"

[[bin]]
name = "shorty"
path = "src/main.rs"
