[package]
name = "shorty"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Noronha"]
license = "MIT OR Apache-2.0"

[dependencies]
mongodb = "3.2.5"
sha2 = "0.10.9"
rand = "0.9.2"
hex = "0.4.3"
chrono = "0.4.41"
regex = "1.11.2"
lazy_static = "1.5.0"

[dependencies.tokio]
version = "1.45.1"
features = ["full"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.bson]
version = "2.15.0"
features = ["chrono-0_4"]

[dev-dependencies]
dotenv = "0.15.0"

[[bin]]
name = "shorty"
path = "src/main.rs"
